# beneat-mcp

./: .env.local.example  .gitignore  LICENSE  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: eval.yml
app/: globals.css  layout.tsx  robots.ts  sitemap.ts
app/api/lab/: route.ts
app/components/: nav.tsx
app/hooks/: index.ts
app/lab/: page.tsx
app/leaderboard/: page.tsx
app/lib/: agent-coaching.ts  archetypes.ts  arena-agents.ts  dex-programs.ts  helius-client.ts  helius.ts  solana-rpc-client.ts  trade-analyzer.ts  wallet-analytics.ts
data/: tracked-wallets.json
data/agent-trades/: hyperliquid-claude-sonnet-4-5-mm-trade-history-2026-02-13.csv  hyperliquid-claude-sonnet-4-5-nb-trade-history-2026-02-13.csv  hyperliquid-deepseek-v3-1-mm-trade-history-2026-02-13.csv  hyperliquid-gemini-3-pro-mm-trade-history-2026-02-13.csv  (+17 more)
eval/: .gitignore  README.md  conftest.py  pyproject.toml  run_all.py  run_ci.py
eval/adapters/: mcp_client.py  session_state_map.py  trade_loader.py
eval/benchmarks/: mcpmark_adapter.py  mcpsecbench_adapter.py  msb_adapter.py
eval/correlation/: logic_pnl.py
eval/impact/: __init__.py  ablations.py  regime_stress.py  report.py  robustness.py
eval/models/: __init__.py  glm5_judge.py
eval/test_cases/: test_lockout_redteam.py  test_task_completion.py  test_tool_correctness.py
mcp-server/: .env.example  GUIDE.md  INTEGRATION.md  README.md  demo.mjs  package-lock.json  package.json  railway.toml  skill.md  test-e2e.mjs
public/: llms-full.txt  llms.txt
scripts/: fetch-hl-trades.py
(+106 files in other folders)
