[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beneat-eval"
version = "0.1.0"
description = "DeepEval evaluation suite for Beneat MCP trading adapter"
requires-python = ">=3.10"
dependencies = [
    "deepeval>=2.0",
    "deepteam>=1.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pytest>=8.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
include = ["models*", "adapters*", "test_cases*", "benchmarks*", "correlation*", "impact*"]

[tool.pytest.ini_options]
testpaths = ["test_cases"]
asyncio_mode = "auto"
